--- a/lms_automation/templates/admin_login.html
+++ b/lms_automation/templates/admin_login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="row justify-content-center">
-    <div class="col-md-6 col-lg-4">
+    <div class="col-12 col-sm-8 col-md-6 col-lg-4">
         <div class="card shadow">
             <div class="card-header bg-primary text-white text-center">
                 <h4 class="mb-0">🏆 Admin Login</h4>
