--- a/lms_automation/templates/pick_success.html
+++ b/lms_automation/templates/pick_success.html
@@ -86,6 +86,13 @@
                         </small>
                     </div>
                 </div>
+                
+                <div class="mt-4">
+                    <a href="{{ url_for('player_dashboard', token=token) }}" class="btn btn-primary btn-lg">
+                        <i class="fas fa-tachometer-alt me-2"></i>
+                        View Your Dashboard
+                    </a>
+                </div>
             </div>
             <div class="card-footer text-center bg-light">
                 <small class="text-muted d-block">
